--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 gunicorn==19.0
 flask==0.10.1
 flask-script==2.0.5
-sqlalchemy==0.9.6
+sqlalchemy==0.9.7
 flask-sqlalchemy==1.0
+wtforms==2.0.1
+flask-wtf==0.10.0
+wtforms-alchemy
 psycopg2==2.5.3
 alembic==0.6.5
 blinker==1.3
